assets/scss/base/elements/_body.scss
::-webkit-scrollbar-track {
	background-color: var(--color-white);
}

::-webkit-scrollbar{
	width: 11px;
	background-color: var(--color-white);
}

::-webkit-scrollbar-thumb {
	background-color: var(--color-black);
}

html, body {
	scrollbar-color: var(--color-black) var(--color-white);
	scrollbar-width: thin;
}

body, html {
	background: $color__background-body; // Fallback for when there is no custom background color defined.
}

body.no-scroll {
	overflow-y: hidden;
}

